Add NotificationController tests